--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "jsnext:main": "src/index.js",
   "scripts": {
     "build": "babel src -d dist",
-    "prepublish": "npm run build"
+    "prepublish": "npm run build",
+    "test": "node_modules/.bin/mocha tests/tests.js"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,8 @@
     "babel-cli": "^6.9.0",
     "babel-loader": "^6.2.5",
     "babel-preset-env": "^1.4.0",
-    "babel-preset-es2015": "^6.9.0"
+    "babel-preset-es2015": "^6.9.0",
+    "chai": "^4.1.1",
+    "mocha": "^3.5.0"
   }
 }
